--- a/styles.css
+++ b/styles.css
@@ -32,3 +32,21 @@ body {
   z-index: 1;
   filter: grayscale(0%);
 }
+
+#menuOpener {
+  bottom: 30px;
+  position: absolute;
+  z-index: 2;
+  right: 0px;
+}
+
+#menu {
+  right: 10%;
+  top: 10%;
+  width: 80%;
+  height: 80%;
+  background-color: rgba(255,255,255,0.7);
+  position: absolute;
+  z-index: 2;
+  display: none;
+}
