--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,7 @@ html {
     width: 100%;
     height: 100%;
     
-    background: #11e8bb; /* Old browsers */
-    background: -moz-linear-gradient(top,  #11aae8 0%, #07425a 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top,  #11aae8 0%,#07425a 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom,  #11aae8 0%,#07425a 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#11e8bb', endColorstr='#8200c9',GradientType=0 ); /* IE6-9 */
+    background: #26a9ff; /* Old browsers */
   }
 
 body {
@@ -34,6 +30,7 @@ body {
 #container {
   z-index: 1;
   filter: grayscale(0%);
+  opacity: 0;
 }
 
 #menuOpener {
@@ -91,7 +88,7 @@ body {
 }
 
 #enterButton {
-  top: 50%;
+  top: -20%;
   width: 60%;
   right: 20%;
   z-index: 3!important;
