--- a/styles.css
+++ b/styles.css
@@ -38,27 +38,43 @@ body {
   position: absolute;
   z-index: 2;
   right: 1%;
-  background-color: rgba(0, 47, 85, 0.2);
-  color: aliceblue;
+  background-color: rgba(0, 47, 85, 0.5);
+  color: rgb(255, 255, 255);
   font-size: 4vh;
   font-family: 'Lato', sans-serif;
-  border: 3px solid aliceblue;
+  text-shadow: 2px 2px 10px #000000;
+  border: 3px solid rgb(255, 255, 255);
 }
 
 #menu {
-  right: 10%;
-  top: 10%;
-  width: 80%;
-  height: 80%;
-  background-color: rgba(255,255,255,0.7);
+  left: 8%;
+  top: 8%;
+  right: 8%;
+  bottom: 8%;
+  padding: 20px;
+  font-size: 30px;
+  background-color: rgba(0, 47, 85, 0.9);
+  border: 3px solid rgb(255, 255, 255);
+  color: rgb(255, 255, 255);
+  text-shadow: 2px 2px 10px #000000;
+  font-family: 'Lato', sans-serif;
   position: absolute;
-  z-index: 2;
+  z-index: 4;
   display: none;
 }
 
 #imgurl {
-  width: 20%;
-  padding-left: 40%;
+  width:150px; 
+}
+
+#menuPrev:hover {
+  width:160px;
+  
+}
+
+#menuNext:hover {
+  width:160px;
+  
 }
 
 #startButton {
@@ -70,36 +86,41 @@ body {
   font-size: 10vw;
   text-align: center;
   font-family: 'Lato', sans-serif;
-  color: aliceblue;
+  color: rgb(255, 255, 255);
   background-color: rgba(0, 35, 82, 0.5);
+  text-shadow: 2px 2px 10px #000000;
   position: absolute;
 }
 
 #info {
-  right: -1%;
-  top: 1%;
-  width: 100%;
-  height: 100%;
+  left: 0%;
+  top: 0%;
+  padding: 10px;
+  margin: 10px;
   z-index: 2;
-  font-size: 20px;
-  font-family: sans-serif;
-  color: aliceblue;
+  font-family: 'Lato', sans-serif;
+  font-size: 30px;
+  color: rgb(255, 255, 255);
   position: absolute;
+  background-color: rgba(0, 47, 85, 0.7);
+  border: 3px solid rgb(255, 255, 255);
+  text-shadow: 2px 2px 10px #000000;
 }
 
 #enterButton {
-  top: -20%;
+  top: -40%;
   width: 60%;
-  right: 20%;
+  left: 20%;
   z-index: 3!important;
-  font-size: 4vw;
+  font-size: 6vh;
   font-family: 'Lato', sans-serif;
   position: absolute;
-  color: aliceblue;
-  background-color: rgba(0, 47, 85, 0.2);
-  border: 3px solid aliceblue;
+  color: rgb(255, 255, 255);
+  background-color: rgba(0, 47, 85, 0.5);
+  border: 3px solid rgb(255, 255, 255);
+  text-shadow: 2px 2px 10px #000000;
 }
 
 #enterButton:hover,#menuOpener:hover{
-  background-color:rgba(0, 47, 85, 0.4);
+  background-color:rgba(0, 47, 85, 0.8);
 }
