--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ html {
     width: 100%;
     height: 100%;
     
-    background: #26a9ff; /* Old browsers */
+    background: rgba(0, 35, 82); /* Old browsers */
   }
 
 body {
@@ -14,7 +14,7 @@ body {
 
 #myProgress {
   width: 100%;
-  background-color: grey;
+  background-color: white;
   position: absolute;
   z-index: 2;
   bottom: 10px;
@@ -23,7 +23,7 @@ body {
 #myBar {
   width: 0%;
   height: 10px;
-  background-color: blue;
+  background-color: rgba(0, 35, 82);
   display: none;
 }
 
@@ -34,7 +34,7 @@ body {
 }
 
 #menuOpener {
-  bottom: 3%;
+  bottom: 2%;
   position: absolute;
   z-index: 2;
   right: 1%;
@@ -45,6 +45,7 @@ body {
   text-shadow: 2px 2px 10px #000000;
   border: 3px solid rgb(255, 255, 255);
   display: none;
+  border-radius: 10px;
 }
 
 #menu {
@@ -54,23 +55,30 @@ body {
   bottom: 8%;
   padding: 20px;
   font-size: 30px;
-  background-color: rgba(0, 47, 85, 0.9);
+  background-color: rgba(255, 255, 255, 0.9);
   border: 3px solid rgb(255, 255, 255);
-  color: rgb(255, 255, 255);
-  text-shadow: 2px 2px 10px #000000;
+  color: rgba(0, 47, 85);
   font-family: 'Lato', sans-serif;
   position: absolute;
   z-index: 7;
   display: none;
+  border-radius: 10px;
+}
+
+#icons {
+  height: 22%;
 }
 
 .menuIcon {
-  width: 10%;
-
+  width: 12%;
+  vertical-align: middle;
+  cursor: pointer;
+  transition: 0.3s;
 }
 
 .menuIcon:hover {
-  box-shadow: 0px 0px 10px white;
+  box-shadow: inset 0 0 10px rgba(0, 35, 82, 0.5);
+  border-radius: 10px;
 }
 
 #startButton {
@@ -101,6 +109,7 @@ body {
   background-color: rgba(0, 47, 85, 0.7);
   border: 3px solid rgb(255, 255, 255);
   text-shadow: 2px 2px 10px #000000;
+  border-radius: 10px;
 }
 
 #enterButton {
@@ -115,6 +124,7 @@ body {
   background-color: rgba(0, 47, 85, 0.5);
   border: 3px solid rgb(255, 255, 255);
   text-shadow: 2px 2px 10px #000000;
+  border-radius: 10px;
 }
 
 #enterButton:hover,#menuOpener:hover{
@@ -133,6 +143,7 @@ body {
   z-index: 5;
   border: 10px inset white;
   display: none;
+  box-shadow: inset 0 0 10px rgba(0, 35, 82, 0.5);
 }
 
 #pointer {
@@ -164,4 +175,56 @@ body {
   text-shadow: 2px 2px 10px #000000;
   border: 3px solid rgb(255, 255, 255);
   display: none;
+}
+
+#collection {
+  z-index: 9;
+  position: absolute;
+  right: -50%;
+  bottom: -50%;
+  margin-bottom: -150px;
+  margin-right: -150px;
+  font-family: 'Lato', sans-serif;
+  color: rgba(0, 47, 85);
+  text-shadow: 0px 0px 5px white, 0px 0px 5px white, 0px 0px 5px white;
+  transform: scale(0.1);
+  opacity: 0;
+}
+
+@keyframes notification {
+
+  0% {
+    opacity: 0;
+    right: 50%;
+    bottom: 50%;
+    transform: scale(0.1);
+  }
+  5% {
+    opacity: 1;
+    right: 50%;
+    bottom: 50%;
+    transform: scale(1);
+  }
+  70% {
+    opacity: 1;
+    right: 50%;
+    bottom: 50%;
+    transform: scale(1);
+  }
+  100% {
+    opacity: 0;
+    right: 0%;
+    bottom: 0%;
+    transform: scale(0.1);
+  }
+
+}
+
+#colImg {
+  box-shadow: 0px 0px 100px 100px white;
+  background-color: white;
+  border-radius: 100%;
+  width: 300px;
+  height: 300px;
+  
 }
