--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,14 @@
-@import url(//fonts.googleapis.com/css?family=Lato:300:400);
-
 html {
     width: 100%;
     height: 100%;
-    
-    background: rgba(0, 35, 82); /* Old browsers */
+    background: rgba(0, 35, 82); /* Old browsers @import url(//fonts.googleapis.com/css?family=Lato:300:400); */
   }
 
 body {
     overflow: hidden;
     margin: 0px;
+    width: 100%;
+    height: 100%;
 }
 
 #myProgress {
@@ -41,10 +40,11 @@ body {
   background-color: rgba(0, 47, 85, 0.5);
   color: rgb(255, 255, 255);
   font-size: 4vh;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Verdana', sans-serif;
   text-shadow: 2px 2px 10px #000000;
   border: 3px solid rgb(255, 255, 255);
   display: none;
+  cursor: pointer;
   border-radius: 10px;
 }
 
@@ -54,11 +54,11 @@ body {
   right: 8%;
   bottom: 8%;
   padding: 20px;
-  font-size: 30px;
+  font-size: 18px;
   background-color: rgba(255, 255, 255, 0.9);
   border: 3px solid rgb(255, 255, 255);
   color: rgba(0, 47, 85);
-  font-family: 'Lato', sans-serif;
+  font-family: 'Verdana', sans-serif;
   position: absolute;
   z-index: 7;
   display: none;
@@ -66,12 +66,13 @@ body {
 }
 
 #icons {
-  height: 22%;
+  height: 15vw;
+
 }
 
 .menuIcon {
-  width: 12%;
-  vertical-align: middle;
+  width: 10px;
+  height: 10px;
   cursor: pointer;
   transition: 0.3s;
 }
@@ -89,7 +90,7 @@ body {
   z-index: 2;
   font-size: 10vw;
   text-align: center;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Verdana', sans-serif;
   color: rgb(255, 255, 255);
   background-color: rgba(0, 35, 82, 0.5);
   text-shadow: 2px 2px 10px #000000;
@@ -102,8 +103,8 @@ body {
   padding: 10px;
   margin: 10px;
   z-index: 2;
-  font-family: 'Lato', sans-serif;
-  font-size: 30px;
+  font-family: 'Verdana', sans-serif;
+  font-size: 20px;
   color: rgb(255, 255, 255);
   position: absolute;
   background-color: rgba(0, 47, 85, 0.7);
@@ -113,23 +114,49 @@ body {
 }
 
 #enterButton {
-  top: -40%;
+  top: 40%;
   width: 60%;
   left: 20%;
-  z-index: 3!important;
-  font-size: 6vh;
-  font-family: 'Lato', sans-serif;
+  z-index: 4!important;
+  font-size: 30px;
+  font-family: 'Verdana', sans-serif;
   position: absolute;
   color: rgb(255, 255, 255);
   background-color: rgba(0, 47, 85, 0.5);
   border: 3px solid rgb(255, 255, 255);
   text-shadow: 2px 2px 10px #000000;
   border-radius: 10px;
+  cursor: pointer;
+  opacity: 0;
 }
 
 #enterButton:hover,#menuOpener:hover{
   background-color:rgba(0, 47, 85, 0.8);
 }
+
+#enterButton.introd {
+  animation: intros 1s linear;
+  animation-fill-mode: forwards;
+}
+
+#container.introd {
+  animation-direction: reverse;
+  animation: intros 1s linear;
+  animation-fill-mode: forwards;
+  
+}
+
+@keyframes intros {
+  0% {
+    opacity: 0;
+    transform: scale(1.5);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
 
 #compass {
   border-radius: 100%;
@@ -171,7 +198,7 @@ body {
   background-color: rgba(0, 47, 85, 0.5);
   color: rgb(255, 255, 255);
   font-size: 4vh;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Verdana', sans-serif;
   text-shadow: 2px 2px 10px #000000;
   border: 3px solid rgb(255, 255, 255);
   display: none;
@@ -184,11 +211,15 @@ body {
   bottom: -50%;
   margin-bottom: -150px;
   margin-right: -150px;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Verdana', sans-serif;
   color: rgba(0, 47, 85);
   text-shadow: 0px 0px 5px white, 0px 0px 5px white, 0px 0px 5px white;
   transform: scale(0.1);
   opacity: 0;
+}
+
+#collection.notif {
+  animation: notification 5s linear;
 }
 
 @keyframes notification {
