--- a/styles.css
+++ b/styles.css
@@ -66,13 +66,13 @@ body {
 }
 
 #icons {
-  height: 15vw;
+  height: 16vw;
 
 }
 
 .menuIcon {
-  width: 10px;
-  height: 10px;
+  width: 7vw;
+  height: 7vw;
   cursor: pointer;
   transition: 0.3s;
 }
@@ -80,6 +80,11 @@ body {
 .menuIcon:hover {
   box-shadow: inset 0 0 10px rgba(0, 35, 82, 0.5);
   border-radius: 10px;
+}
+
+#description {
+  overflow: auto;
+  height: 60%;
 }
 
 #startButton {
