--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 html {
     width: 100%;
     height: 100%;
-    background: rgba(0, 35, 82); /* Old browsers @import url(//fonts.googleapis.com/css?family=Lato:300:400); */
+    background: rgba(0, 35, 82);
   }
 
 body {
