--- a/styles.css
+++ b/styles.css
@@ -170,7 +170,7 @@ body {
   background-color: rgba(240, 248, 255, 0.514);
   color: #26a9ff;
   bottom: 60px;
-  left: 20px;
+  left: 47%;
   width: 100px;
   height: 100px;
   position: absolute;
