--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
 
 #myBar {
   width: 0%;
-  height: 10px;
+  height: 15px;
   background-color: rgba(0, 35, 82);
   display: none;
 }
@@ -116,7 +116,21 @@ body {
   border: 3px solid rgb(255, 255, 255);
   text-shadow: 2px 2px 10px #000000;
   border-radius: 10px;
+  animation: flickering 1s infinite;
 }
+
+@keyframes flickering {
+  0% {
+    box-shadow: #ffffff 0px 0px;
+  }
+  50% {
+    box-shadow: #ffffff 0px 0px 20px;
+  }
+  100% {
+    box-shadow: #ffffff 0px 0px;
+  }
+}
+
 
 #enterButton {
   top: 40%;
