--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,8 @@ body {
 #myProgress {
   width: 100%;
   background-color: white;
+  border: rgb(255, 255, 255);
+  border-width: 1px;
   position: absolute;
   z-index: 2;
   bottom: 10px;
@@ -21,8 +23,8 @@ body {
 
 #myBar {
   width: 0%;
-  height: 15px;
-  background-color: rgba(0, 35, 82);
+  height: 11px;
+  background-color: rgb(0, 4, 255);
   display: none;
 }
 
@@ -39,7 +41,7 @@ body {
   right: 1%;
   background-color: rgba(0, 47, 85, 0.5);
   color: rgb(255, 255, 255);
-  font-size: 4vh;
+  font-size: 3vh;
   font-family: 'Verdana', sans-serif;
   text-shadow: 2px 2px 10px #000000;
   border: 3px solid rgb(255, 255, 255);
